// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiKeyPadMenuItem is rendered 1`] = `
<a
  aria-label="aria-label"
  class="ouiKeyPadMenuItem testClass1 testClass2"
  data-test-subj="test subject string"
  href="#"
  rel="noreferrer"
>
  <div
    class="ouiKeyPadMenuItem__inner"
  >
    <div
      class="ouiKeyPadMenuItem__icon"
    >
      Icon
    </div>
    <p
      class="ouiKeyPadMenuItem__label"
    >
      Label
    </p>
  </div>
</a>
`;

exports[`OuiKeyPadMenuItem renders button 1`] = `
<button
  class="ouiKeyPadMenuItem"
  type="button"
>
  <div
    class="ouiKeyPadMenuItem__inner"
  >
    <div
      class="ouiKeyPadMenuItem__icon"
    >
      Icon
    </div>
    <p
      class="ouiKeyPadMenuItem__label"
    >
      Label
    </p>
  </div>
</button>
`;

exports[`OuiKeyPadMenuItem renders href 1`] = `
<a
  class="ouiKeyPadMenuItem"
  href="#"
  rel="noreferrer"
>
  <div
    class="ouiKeyPadMenuItem__inner"
  >
    <div
      class="ouiKeyPadMenuItem__icon"
    >
      Icon
    </div>
    <p
      class="ouiKeyPadMenuItem__label"
    >
      Label
    </p>
  </div>
</a>
`;

exports[`OuiKeyPadMenuItem renders href with rel 1`] = `
<a
  class="ouiKeyPadMenuItem"
  href="#"
  rel="noreferrer"
>
  <div
    class="ouiKeyPadMenuItem__inner"
  >
    <div
      class="ouiKeyPadMenuItem__icon"
    >
      Icon
    </div>
    <p
      class="ouiKeyPadMenuItem__label"
    >
      Label
    </p>
  </div>
</a>
`;
